--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     <header>
         <h1>Rheinz Jave Tornito</h1>
-        <img src="IMG_me..jpg" alt="My Profile Picture" width="150" height="200">
+        <img src="1742884158445.jpg" alt="My Profile Picture" width="150" height="200">
         <p>Camanga Tukuran, Zamboanga del Sur</p>
         <p>09514891477</p>
         <h3>Career Objective</h3>
