--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         h1, h2, h3 {
-            color: #fff; /* White headings */
+            color: blue; /* White headings */
             margin-top: 0; /* Reduce top margin of headings */
         }
 
